Fix navbar on mobile

--- a/svenv/blog/static/blog/less/template/tablet.less
+++ b/svenv/blog/static/blog/less/template/tablet.less
@@ -4,6 +4,7 @@
 
 body.categoryview #document > header {
     h1 {
+        font-size: 2em;
         .hmargin(0.125, 0.125);
     }
 }
